# p8_FastapiProject

./: database.py  main.py  pyproject.toml  requirements.txt
apps/routers/: auth.py  employee.py
templates/auth/: confirm-mail.html  login.html  logout.html  register.html
templates/product/: product-details.html  product-list.html
